--- a/funnel-ferret-app/src/App.css
+++ b/funnel-ferret-app/src/App.css
@@ -40,3 +40,14 @@
 .read-the-docs {
   color: #888;
 }
+
+
+.topic-button {
+  width: 200px;
+  height: 100px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top:10px;
+  padding-bottom: 10px;
+  margin: 10px;
+}
