--- a/funnel-ferret-app/src/index.css
+++ b/funnel-ferret-app/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #DDFCFF;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -32,25 +32,35 @@ body {
 
 h1 {
   font-size: 3.2em;
+  color: #704834;
   line-height: 1.1;
 }
 
-button {
+h2 {
+  color: #77836D
+}
+
+p {
+  color: #000000
+}
+
+.start-button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #FCEE21;
+  color: #000000;
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
+.start-button:hover {
   border-color: #646cff;
 }
-button:focus,
-button:focus-visible {
+.start-button:focus,
+.start-button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
