--- a/funnel-ferret-app/src/index.css
+++ b/funnel-ferret-app/src/index.css
@@ -45,16 +45,23 @@ p {
 }
 
 .start-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #FCEE21;
-  color: #000000;
+  width: 300px; 
+  height: 60px; 
+  padding: 0; 
+  margin: 0; 
+  background: #FCEE21;
+  box-shadow: 2px 6px 6.5px 1px rgba(0, 0, 0, 0.25);
+  color: #2d3436; 
+  font-size: 1rem; 
+  font-family: 'Arial', sans-serif;
+  border: none;
+  border-radius: 25px;
   cursor: pointer;
-  transition: border-color 0.25s;
+  transition: all 0.3s ease;
+  position: fixed;
+  bottom: 90px;
+  right: 230px;
+
 }
 .start-button:hover {
   border-color: #646cff;
@@ -62,6 +69,16 @@ p {
 .start-button:focus,
 .start-button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+.landingPageLogo {
+  right: 100px;
+  height:900px;
+}
+
+.no-scroll-container {
+  overflow: hidden;
+  width:100%;
 }
 
 @media (prefers-color-scheme: light) {
